# PfSolve

./: CMakeLists.txt  PfSolve.cpp  README.md
PfSolve/: pfSolve.h  pfSolve_AppCollectionManager.hpp
PfSolve/pfSolve_AppManagement/: pfSolve_DeleteApp.h  pfSolve_InitializeApp.h  pfSolve_RunApp.h
PfSolve/pfSolve_CodeGen/pfSolve_KernelsLevel0/: pfSolve_KernelStartEnd.h  pfSolve_KernelUtils.h  pfSolve_Zeropad.h
PfSolve/pfSolve_CodeGen/pfSolve_KernelsLevel0/pfSolve_MemoryManagement/: pfSolve_Registers.h
PfSolve/pfSolve_CodeGen/pfSolve_KernelsLevel0/pfSolve_MemoryManagement/pfSolve_MemoryInitialization/: pfSolve_Constants.h  pfSolve_InputOutput.h  pfSolve_InputOutputLayout.h  pfSolve_PushConstants.h  pfSolve_Registers.h  pfSolve_SharedMemory.h
PfSolve/pfSolve_CodeGen/pfSolve_KernelsLevel0/pfSolve_MemoryManagement/pfSolve_MemoryTransfers/: pfSolve_Transfers.h
PfSolve/pfSolve_CodeGen/pfSolve_KernelsLevel1/: pfSolve_MatVecMul.h  pfSolve_ReadWrite.h  pfSolve_RegistersScaleC.h  pfSolve_TridiagonalSolve.h  pfSolve_WarpReduce.h  pfSolve_compute_Pf.h  pfSolve_compute_fluxD.h
PfSolve/pfSolve_CodeGen/pfSolve_KernelsLevel2/: pfSolve_ALT.h  pfSolve_FiniteDifferences.h  pfSolve_Jacobi_sequential.h  pfSolve_JonesWorland.h  pfSolve_JonesWorland_sequential.h  pfSolve_block.h  pfSolve_copy.h  pfSolve_dgbmv.h  pfSolve_scaleC.h
PfSolve/pfSolve_CodeGen/pfSolve_MathUtils/: pfSolve_MathUtils.h
PfSolve/pfSolve_CodeGen/pfSolve_StringManagement/: pfSolve_StringManager.h  pfSolve_sprintf.h
PfSolve/pfSolve_PlanManagement/pfSolve_API_handles/: pfSolve_CompileKernel.h  pfSolve_DeletePlan.h  pfSolve_DispatchPlan.h  pfSolve_InitAPIParameters.h  pfSolve_LaunchKernel.h  pfSolve_ManageMemory.h  pfSolve_UpdateBuffers.h
PfSolve/pfSolve_PlanManagement/pfSolve_HostFunctions/: pfSolve_AxisBlockSplitter.h  pfSolve_ManageLUT.h  pfSolve_RecursiveFFTGenerators.h  pfSolve_Scheduler.h
PfSolve/pfSolve_PlanManagement/pfSolve_Plans/: pfSolve_Plan.h  pfSolve_Plan_FiniteDifferences.h  pfSolve_Plan_JonesWorland.h  pfSolve_Plan_JonesWorland_sequential.h  pfSolve_Plan_block.h  pfSolve_Plan_copy.h  pfSolve_Plan_dgbmv.h  pfSolve_Plan_scaleC.h
PfSolve/pfSolve_Structs/: pfSolve_Structs.h
benchmark_scripts/vkFFT_scripts/include/: sample_0_benchmark_VkFFT_single.h  sample_1_benchmark_VkFFT_double.h  sample_2.h  user_benchmark_VkFFT.h  utils_VkFFT.h
benchmark_scripts/vkFFT_scripts/src/: sample_0_benchmark_VkFFT_single - Copy.cpp  sample_0_benchmark_VkFFT_single.cpp  sample_1_benchmark_VkFFT_double.cpp  sample_1_benchmark_VkFFT_double_JW.cpp  sample_1_benchmark_VkFFT_double_bidiag.cpp  sample_1_benchmark_VkFFT_double_slevinsky.cpp  sample_1_benchmark_VkFFT_double_tridiag.cpp  sample_1_benchmark_VkFFT_double_tridiag_precision.cpp  sample_2.cpp  utils_VkFFT.cpp
